# cad-builder

./: .env.example  .env.production  .gitignore  CHANGELOG.md  DEPLOY.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cad_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: licenses.yaml  models.yaml  observability.yaml  pipelines.yaml  safety.yaml  upgrade_policy.yaml
data/: api_keys.json
docker/: Caddyfile  Dockerfile  docker-compose.prod.yml  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.jsx  api.js  index.css
schemas/: cad_program.schema.json  job.schema.json  model_manifest.schema.json  part_spec.schema.json  validation_report.schema.json
scripts/: check_gpu.py  deploy.sh  download_models.ps1  download_models.sh  install_startup.ps1  install_vision_repos.ps1  install_vision_repos.sh  pin_versions.sh  run_dev.sh  run_worker.sh  setup_linux.sh  setup_windows.ps1  start_cadbuilder.bat  start_server.ps1  test_gpu_pipeline.py  test_llm_pipeline.py  upgrade_models.sh  vast_autodeploy.py  vast_check.py  vast_deploy.py  vast_destroy.py  vast_restart.py  vast_ssh_setup.py
services/api/: auth.py  deps.py  main.py  quotas.py  rate_limit.py  routes_assets.py  routes_billing.py  routes_jobs.py  routes_models.py  routes_stream.py  routes_upload.py
services/cad/: cadquery_runner.py  dimension_probe.py  exporters.py  freecad_runner.py  geometry_metrics.py  (+3 more)
tests/: test_audit_fixes.py  test_cad_validity.py  test_image_to_step_e2e.py  test_mesh_to_cadquery.py  test_open3d_fit_optional.py  test_pipeline_smoke.py  test_primitive_fit.py  test_scale_and_step03.py  test_schemas.py  test_step_export.py
(+51 files in other folders)
